HelloUltraviolet/Fixtures/RejectedSource/Comptime/DeriveMissingEmittedClass/Expected.uv
//! Expected diagnostic metadata for the DeriveMissingEmittedClass rejected-source specimen.

expectedDiagnostic("E-CTE-0331", "requirement.22.DeriveEmitsValidation")
